# star-charter

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  dataFetch.py  docker-compose.yml  examples.md  prettymake  runExamples.py  setup.sh
data/constellations/: README.md  dataFetch.py
data/horizon_graphics/: README.md  url
data/milkyWay/: url
data/milkyWay/process/: CMakeLists.txt  Makefile  prettymake
data/milkyWay/process/src/: image.h  image_in.c  image_out.c  main.c  main.h
data/milkyWay/process/src/coreUtils/: asciiDouble.c  asciiDouble.h  errorReport.c  errorReport.h  strConstants.h
data_generated/deep_sky_merged_catalogue/: README.md
data_generated/milky_way_map/: README.md
data_generated/star_catalogue_merged/: README.md
data_processing/deep_sky_merge_catalogues/: fetch_distances_from_ned.py  merge.py
data_processing/milky_way_map/: Makefile  prettymake
data_processing/star_catalogue_merged/: dcf_ast.py  main_catalogue_merge.py  star_name_conversion.py
examples/: all_constellations.py  all_sky_maps.sch  alt_az.sch  background_image_demo.sch  constellation_sticks.sch  coordinates.sch  cygnus_photo_overlay.sch  demo_chart_202312_ecliptic.sch  demo_chart_2023_asteroids.sch  demo_chart_2023_planets.sch  demo_charts.sch  dso_planner.sch  ephemerides.sch  galactic_coordinates.sch  jupiter_ephemeris.sch  local_sky_202312_moon.sch  local_sky_202312_wide.sch  make_all_examples.sh  moon_ephemeris.sch  orion.sch  peters.sch  peters_local_horizon.sch  unit_test_altaz_rotate.sch  unit_test_altaz_tilt.sch  unit_test_altaz_timelapse.sch  unit_test_galactic_tilt.sch  venus_ephemeris.sch
examples/include_files/: colour_scheme_dark_bg.sch  colour_scheme_dark_bg_tweak_all_sky.sch  colour_scheme_dark_bg_tweak_comet.sch  colour_scheme_light_bg.sch  colour_scheme_light_bg_tweak_all_sky.sch  colour_scheme_light_bg_tweak_comet.sch  colour_scheme_pastel.sch  colour_scheme_pastel_tweak_all_sky.sch  light_on_dark_colours.sch  meteor_showers_01_january.sch  meteor_showers_02_february.sch  meteor_showers_03_march.sch  meteor_showers_04_april.sch  meteor_showers_05_may.sch  meteor_showers_06_june.sch  meteor_showers_07_july.sch  meteor_showers_08_august.sch  meteor_showers_09_september.sch  meteor_showers_10_october.sch  meteor_showers_11_november.sch  meteor_showers_12_december.sch  meteor_showers_december.sch  twilight_colour_scheme.sch  twilight_ephemeris_style.sch
examples/output/: README.md
examples_python/: .gitignore  README.md  chart_render.py  chart_templates.py  dcf_ast.py  do_all.sh  do_moon_closeup.py  do_planets.py
src/: main.c
src/argparse/: argparse.c  argparse.h
src/astroGraphics/: constellations.c  constellations.h  deepSky.c  deepSky.h  deepSkyOutlines.c  deepSkyOutlines.h  ephemeris.c  ephemeris.h  galaxyMap.c  galaxyMap.h  greatCircles.c  greatCircles.h  ngc.c  (+25 more)
(+259 files in other folders)
